sticky navbar and header overlapping problem fixed

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,12 +26,10 @@
 }
 
 .header {
-	position: fixed;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	width: 100%;
-	max-width: 100%;
 	height: 5rem;
 	padding: 0 2rem;
 	background-color: #fdf2e9;
@@ -41,7 +39,6 @@
 	position: fixed;
 	width: 100%;
 	max-width: 100%;
-	background-color: transparent;
 }
 
 .logo {
@@ -96,6 +93,10 @@
 	.hero-container {
 		grid-template-columns: (2, 1fr);
 	}
+}
+
+.main {
+	margin-top: 2.5rem;
 }
 
 .heading-primary {
@@ -327,7 +328,7 @@
 }
 
 .meal-cards {
-	padding: 2rem 0;
+	padding: 2rem 3.5rem;
 }
 
 .meal {
@@ -840,7 +841,8 @@
 }
 
 .return-to-the-top-btn {
-	position: fixed;
-	bottom: 5;
-	right: 5;
+	position: absolute;
+	display: block;
+	bottom: 0;
+	right: 0;
 }
